syntax = "proto3";

package protocol_upgrade.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/protocol_upgrade";

import "google/protobuf/wrappers.proto";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

message ProtocolUpgradeConfig {
    message ProtocolUpgradeSpec {
        // Whether the upgrade should be enabled. If left unset, Envoy will enable the protocol upgrade.
        google.protobuf.BoolValue enabled = 1;
    }

    oneof upgrade_type {
        // Specification for websocket upgrade requests.
        ProtocolUpgradeSpec websocket = 1;
        ProtocolUpgradeSpec connect = 2;
    }
}
